@@ -5,6 +5,7 @@ import com.company.searchstore.dto.Property;
 import com.company.searchstore.services.SearchService;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.val;
 import org.junit.Assert;
@@ -27,7 +28,7 @@ public class SearchControllerTest {
     public void testSearchField() {
         List<String> fields = searchController.getSearchFields().getBody();
         Assert.assertNotNull(fields);
-        val thislist = Stream.of(Property.values()).map(Objects::toString).toList();
+        val thislist = Stream.of(Property.values()).map(Objects::toString).collect(Collectors.toList());
         Assert.assertTrue(fields.containsAll(thislist));
     }
 }
